added a display element to display score

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <script src="src/snake.js" charset="utf-8"></script>
     <script src="src/draw.js" charset="utf-8"></script>
     <script src="src/main.js" charset="utf-8"></script>
+    <script src="src/game.js" charset="utf-8"></script>
   </head>
-  <body>
+  <body align="center">
     <div class="container" id="keys" tabindex="0">
       <table class="game" id="grid">
 
@@ -19,5 +20,6 @@
     <div id="hidden_tail">
 
     </div>
+    <h3 id="display">Score:</h3>
   </body>
 </html>
